migrated from Hibernate to Spring Data Jpa. Getting data from menu.properties refactored